--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "~3.8.11",
-    "gulp-ruby-sass": "~0.7.1",
     "gulp-autoprefixer": "0.0.8",
-    "gulp-livereload": "~2.1.1"
+    "gulp-livereload": "~2.1.1",
+    "gulp-ruby-sass": "~0.7.1",
+    "run-sequence": "^1.1.2"
   }
 }
