--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "gulp": "~3.8.11",
-    "gulp-autoprefixer": "0.0.8",
-    "gulp-livereload": "~2.1.1",
-    "gulp-ruby-sass": "~0.7.1",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^2.3.1",
+    "gulp-livereload": "^3.8.0",
+    "gulp-ruby-sass": "^1.4.0",
     "run-sequence": "^1.1.2"
   }
 }
